--- a/index.html
+++ b/index.html
@@ -117,10 +117,11 @@
         <li><a href="https://www.instagram.com/enricozon/">Seguici su Instagram</a></li>
         <li><a href="https://whatsapp.com/channel/0029Va8G3gGAu3aM27dYtF1V">Seguici su WhatsApp</a></li>
         <li><a href="https://enricozon.cranci.xyz/util/discord/discord.html">Qualcuno ha detto Discord?</a></li>
-        <li><a href="util/about/index.html">FAQ</a></li>
+        <li><a href="https://enricozon.cranci.xyz/util/time/index.html">Time Machine</a></li>
+        <li><a href="https://enricozon.cranci.xyz/util/about/index.html">FAQ</a></li>
         <li><a href="mailto:enricozon@cranci.xyz">Contact</a></li>
-        <li><a href="util/sing-up-enricozon/index.html">Sign Up</a></li>
-        <li><a href="util/sing-in-enricozon/index.html">Sign In</a></li>
+        <li><a href="https://enricozon.cranci.xyz/util/sing-up-enricozon/index.html">Sign Up</a></li>
+        <li><a href="https://enricozon.cranci.xyz/util/sing-in-enricozon/index.html">Sign In</a></li>
       </ul>
     </div>
   </nav>
