--- a/products/adam-enricozon/index.html
+++ b/products/adam-enricozon/index.html
@@ -27,7 +27,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" type="text/css" href="https://enricozon.cranci.xyz/styles.css">
+  
 
   <link rel="icon" href="enricozon-logo(1).png">
 
@@ -38,10 +38,7 @@
 
 <body>
 
-  <div class="spider" id="spider1"></div>
-  <div class="spider" id="spider2"></div>
-  <div class="spider" id="spider3"></div>
-  <div class="spider" id="spider4"></div>
+ 
 
   
   <nav class="main-navbar">
@@ -60,7 +57,7 @@
   </div>
   <div class="nav-logo">
     <a href="https://enricozon.cranci.xyz">
-      <img src="enricozon.png" alt="Enricozon" height="48" />
+      <img src="https://raw.githubusercontent.com/Enricozon-Team/enricozon/main/imagini/enricozon.png" alt="Enricozon" height="48" />
     </a>
   </div>
   <div class="nav-search">
