--- a/products/ciccio-enricozon/index.html
+++ b/products/ciccio-enricozon/index.html
@@ -29,17 +29,14 @@
 
   <script type='text/javascript' src='https://platform-api.sharethis.com/js/sharethis.js#property=5df85ba920aa010015eb6002&product=inline-share-buttons&cms=sop' async='async'></script>
 
-  <link rel="stylesheet" type="text/css" href="https://enricozon.cranci.xyz/styles.css">
+  
 
 
 </head>
 
 <body>
 
-  <div class="spider" id="spider1"></div>
-  <div class="spider" id="spider2"></div>
-  <div class="spider" id="spider3"></div>
-  <div class="spider" id="spider4"></div>
+ 
 
   <nav class="main-navbar">
   <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
@@ -57,7 +54,7 @@
   </div>
   <div class="nav-logo">
     <a href="/">
-      <img src="enricozon.png" alt="Enricozon" height="48" />
+      <img src="https://raw.githubusercontent.com/Enricozon-Team/enricozon/main/imagini/enricozon.png" alt="Enricozon" height="48" />
     </a>
   </div>
   <div class="nav-search">
