tolto per davvero halloween adesso spero

--- a/products/mandaino-enricozon/index.html
+++ b/products/mandaino-enricozon/index.html
@@ -53,7 +53,7 @@
     </div>
     <div class="nav-logo">
       <a href="/">
-        <img src="https://raw.githubusercontent.com/Enricozon-Team/enricozon/main/imagini/enricozon.png" alt="Enricozon" height="48" />
+        <img src="enricozon.png" alt="Enricozon" height="48" />
       </a>
     </div>
     <div class="nav-search">
