--- a/products/maranza-enricozon/index.html
+++ b/products/maranza-enricozon/index.html
@@ -57,7 +57,7 @@
   </div>
   <div class="nav-logo">
     <a href="https://enricozon.cranci.xyz">
-      <img src="https://raw.githubusercontent.com/Enricozon-Team/enricozon/main/imagini/enricozon.png" alt="Enricozon" height="48" />
+      <img src="enricozon.png" alt="Enricozon" height="48" />
     </a>
   </div>
   <div class="nav-search">
