--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link href='https://d33wubrfki0l68.cloudfront.net/css/517538d16a3ccdf8ccf450d4f979bfa776b10c14/assets/css/styles.css'
     rel='stylesheet' />
   <link href="https://enricozon.cranci.xyz" rel="stylesheet" />
-  <link rel="icon" href="imagini/enricozon-logo(1).png">
+  <link rel="icon" href="imagini/enricozons.png">
 
   <script type="text/javascript"
     src="https://platform-api.sharethis.com/js/sharethis.js#property=5df85ba920aa010015eb6002&product=inline-share-buttons&cms=sop"
@@ -99,8 +99,12 @@
     </div>
     <div class="nav-deliver-to">
       <div class="location-pin-xl"></div>
-      <p><small>Deliver to</small></p>
-      <p><strong class="delivery-city"> Enrico City, 104, Ohio</strong></p>
+      <p>
+        <small>Deliver to</small>
+      </p>
+      <p>
+        <strong class="delivery-city">Enrico City, 104, Ohio</strong>
+      </p>
     </div>
     <div class="nav-categories">
       <ul>
