--- a/index.html
+++ b/index.html
@@ -743,6 +743,35 @@
           </div>
   
         </div>
+
+        <div class="product-tile">
+
+  
+          <a href="products/paletta-enricozon/index.html">
+            <img src="imagini/pietro.jpg" alt="">
+          </a>
+          <a href="imagini/pietro.jpg" class="product-name">Pietro</a>
+          <div class="product-rating">
+            <div class="stars star-5"></div>
+            <a
+              href="/cora/dp/20191127&pf_rd_p=d619462f-67ee-4647-a6ce-8a6019ab3514&pf_rd_r=HMJRG7R0CD3VEJKWQEDT#reviews">69,2</a>
+          </div>
+          <div class="product-price">
+            <p>
+  
+              $20
+  
+  
+  
+  
+            </p>
+            <div class="baseline"></div>
+            <p class="center-flex grid-prime"><span class="prime-badge"></span> <small>FREE One-Hour Delivery</small></p>
+            <p><small>Supposta <strong>per il culo</strong></small></p>
+  
+          </div>
+  
+        </div>
         
   
 
