--- a/products/pietro-enricozon/index.html
+++ b/products/pietro-enricozon/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="product-info">
-        <h1> Divano Ippopotamo</h1>
+        <h1> Pietro</h1>
         <div class="baseline"></div>
         <p><small>by <a href="#">Enricozon Basics</a></small></p>
         <div class="baseline"></div>
@@ -442,7 +442,7 @@
         <img src="https://enricozon.cranci.xyz/imagini/pack/pachetto.png" alt="" width="260" class="order-placed-thumb">
         <div class="confirmation-info">
           <ul>
-            <li>Pietro-<span class="demeanor"> <span class="link-style delivery-city"></span> <span class="link-style">▾</span> by
+            <li>Pietro<span class="demeanor"> <span class="link-style delivery-city"></span> <span class="link-style">▾</span> by
             Enricozon
               <br>
               <strong>Guaranteed delivery: <span class="green" id="arriving-by">Today, within the hour</span></strong>
