--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
       </div>
 
 
-        <div class="product-tile">
+        <div class="product-badge choice">
 
           <div class="product-badge">Best Divano</div>
   
