--- a/index.html
+++ b/index.html
@@ -715,6 +715,9 @@
 
 
         <div class="product-badge choice">
+          "Amazon's&nbsp;"
+          <span>Choice</span>
+        </div>
 
           <div class="product-badge">Best Divano</div>
   
