--- a/index.html
+++ b/index.html
@@ -714,12 +714,10 @@
       </div>
 
 
-        <div class="product-badge choice">
-          "Amazon's&nbsp;"
-          <span>Choice</span>
-        </div>
+        <div class="product-tile">
+        
 
-          <div class="product-badge">Best Divano</div>
+          <div class="product-badge choice">Best Divano<span>Choice</span></div>
   
           <a href="products/divano-enricozon/">
             <img src="imagini/divano-ippopotamo.jpg" alt="">
