Fixato bug sulla Time Machine

--- a/util/time/index.html
+++ b/util/time/index.html
@@ -39,7 +39,7 @@
         <h1>Benvenuto nella Macchina del Tempo di Enricozon</h1>
         <p>Seleziona una destinazione:</p>
         <button onclick="navigateTo('https://enricozon.ecgang.repl.co')">Open-Beta 2023</button>
-        <button onclick="navigateTo('https://enricozon.cranci.xyz')">Halloween 2023</button>
+        <button onclick="navigateTo('https://enricozon-team.github.io/enricozon-hw')">Halloween 2023</button>
 
     </div>
 
