--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
         <div class="product-tile">
         
 
-          <div class="product-badge choice">Best Divano<span>Choice</span></div>
+          <div class="product-badge choice">Scelto da&nbsp;<span>Enricozon</span></div>
   
           <a href="products/divano-enricozon/">
             <img src="imagini/divano-ippopotamo.jpg" alt="">
