--- a/util/time/index.html
+++ b/util/time/index.html
@@ -37,6 +37,9 @@
             background-color: red;
             margin-top: 40px;
         }
+        #returnButton:hover {
+            background-color: #7f353a;
+        }
     </style>
 </head>
 <body>
