--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
         <small>cos'è questo</small>
         <strong>About Us?</strong>
       </a>
+      <a href="util/about/index.html">
+        <small>cos'è questo</small>
+        <strong>About Us?</strong>
+      </a>
       <a href="util/crat/index.html" class="nav-cart">
         <span class="cart-icon"></span>
         <small>0</small>
