--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
     </div>
     <div class="nav-account">
       <a href="util/about/index.html">
-        <small>cos'è questo</small>
+        <small>Cos'è questo?</small>
         <strong>About Us?</strong>
       </a>
       <a href="util/about/index.html">
-        <small>cos'è questo</small>
-        <strong>About Us?</strong>
+        <small>Una nuova era</small>
+        <strong>Enricozon Prime</strong>
       </a>
       <a href="util/crat/index.html" class="nav-cart">
         <span class="cart-icon"></span>
