--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
     <div class="nav-account">
       <a href="util/about/index.html">
         <small>Cos'è questo?</small>
-        <strong>About Us?</strong>
+        <strong>About Us</strong>
       </a>
-      <a href="util/about/index.html">
+      <a href="util/enricozon-prime/index.html">
         <small>Una nuova era</small>
         <strong>Enricozon Prime</strong>
       </a>
