--- a/util/about/index.html
+++ b/util/about/index.html
@@ -46,7 +46,7 @@
 <body>
     <div class="container">
         <div class="image">
-            <img src="logo.jpeg" alt="Logo enricozon">
+            <img src="enricozons.png" alt="Logo enricozon">
         </div>
         <div class="content">
             <div class="title">About Us</div>
