--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <link href="https://enricozon.cranci.xyz" rel="stylesheet" />
   <link rel="icon" href="imagini/enricozons.png">
   <link href="bar.css" rel="stylesheet">
+  <link href="script.js" rel="stylesheet">
 
   <script type="text/javascript"
     src="https://platform-api.sharethis.com/js/sharethis.js#property=5df85ba920aa010015eb6002&product=inline-share-buttons&cms=sop"
@@ -38,7 +39,6 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-Basic usage
 
   <nav class="main-navbar">
     <div class="mobile">
