--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
 </head>
 
 <body>
-
+  <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
+  <label for="openSidebarMenu" class="sidebarIconToggle">
+    <div class="spinner diagonal part-1"></div>
+    <div class="spinner horizontal"></div>
+    <div class="spinner diagonal part-2"></div>
+  </label>
  
     <div id="sidebarMenu">
       <ul class="sidebarMenuInner">
