--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 </head>
 
 <body>
+  <nav class="main-navbar">
   <input type="checkbox" class="openSidebarMenu" id="openSidebarMenu">
   <label for="openSidebarMenu" class="sidebarIconToggle">
     <div class="spinner diagonal part-1"></div>
