nuovo link per la beta
la beta la devo finire mettondo i prodotti che funziano

--- a/util/time/index.html
+++ b/util/time/index.html
@@ -46,7 +46,7 @@
     <div id="container">
         <h1>Benvenuto nella Macchina del Tempo di Enricozon</h1>
         <p>Seleziona una destinazione:</p>
-        <button onclick="navigateTo('https://enricozon.ecgang.repl.co')">Open-Beta 2023</button>
+        <button onclick="navigateTo('https://enricozon-team.github.io/enricozon-beta')">Open-Beta 2023</button>
         <button onclick="navigateTo('https://enricozon-team.github.io/enricozon-hw')">Halloween 2023</button>
 
         <button id="returnButton" onclick="navigateTo('https://enricozon.cranci.xyz')">Torna all'era attuale</button>
