--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
           <a href="products/adam-enricozon/index.html">
             <img src="products/adam-enricozon/adam.jpg" alt="adam">
           </a>
-          <a href="products/adam-enricozon/adam.jpg" class="product-name">Adam il Nego</a>
+          <a href="products/adam-enricozon/adam.jpg" class="product-name">Adam il Nero</a>
           <div class="product-rating">
             <div class="stars star-1"></div>
             <a
