--- a/index.html
+++ b/index.html
@@ -757,9 +757,9 @@
         
         <div class="product-tile">
           <a href="products/adam-enricozon/index.html">
-            <img src="products/adam-enricozon/adam.jpg" alt="adam">
+            <img src="imagini/adam.jpg" alt="adam">
           </a>
-          <a href="products/adam-enricozon/adam.jpg" class="product-name">Adam il Nero</a>
+          <a href="imagini/adam.jpg" class="product-name">Adam il Nero</a>
           <div class="product-rating">
             <div class="stars star-1"></div>
             <a
