--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </svg>
       </a>
     </a>
-    <a href="util/enricozon-prime/index.html" class="share-button">
+    <a href="util/enricozon-prime/index.html" class="question-mark">
       <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 30 30" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 8l-5-5-5 5M12 4.2v10.3" /></svg>
     </a>
