miglioramento pagina enricozon prime

--- a/util/enricozon-prime/prime/index.html
+++ b/util/enricozon-prime/prime/index.html
@@ -1,1 +1,11 @@
-<h1>Coming Soon</h1>
+<!DOCTYPE html>
+<html lang="it">
+<head>
+    <link rel="icon" href="logo.jpeg">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Enricozon Prime</title>
+</head>
+<body>
+    <h1><font face="Impact, Charcoal">COMING SOON</font></h1>
+</body>
