--- a/util/enricozon-prime/prime/index.html
+++ b/util/enricozon-prime/prime/index.html
@@ -7,5 +7,6 @@
     <title>Enricozon Prime</title>
 </head>
 <body>
+    <img src="prime2.jpg">
     <h1><font face="Impact, Charcoal">COMING SOON</font></h1>
 </body>
