miglioramento pagina enricozon prime 4

--- a/util/enricozon-prime/prime/index.html
+++ b/util/enricozon-prime/prime/index.html
@@ -8,5 +8,5 @@
 </head>
 <body>
     <img src="prime2.jpg">
-    <h1><font face="Impact, Charcoal">COMING SOON</font></h1>
+    <h1>COMING SOON</h1>
 </body>
