--- a/util/enricozon-prime-mobile/prime/index.html
+++ b/util/enricozon-prime-mobile/prime/index.html
@@ -3,15 +3,8 @@
 <head>
     <link rel="icon" href="logo.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Enricozon Prime</title>
-    <style>
-        body {
- color: white;
- background-color: black;
- text-align: center;
- top: 50%;
-}
-    </style>
 </head>
 <body>
     <img src="prime2.jpg">
