--- a/util/enricozon-prime-mobile/prime/index.html
+++ b/util/enricozon-prime-mobile/prime/index.html
@@ -9,4 +9,12 @@
 <body>
     <img src="prime2.jpg">
     <h1>COMING SOON</h1>
+    <p3>
+        <a href="enricozon.cranci.xyz">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+          TORNA SU ENRICOZON
+      </p3>
 </body>
