ENRICOZON PRIME MOBILE

--- a/util/enricozon-prime-mobile/index.html
+++ b/util/enricozon-prime-mobile/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="contenitore">
         <video muted autoplay loop class="videofullscreen" id="myVideo">
-            <source src="prime2.mp4" type="video/mp4">
+            <source src="primemobile.mp4" type="video/mp4">
         </video>
     </div>
 
