--- a/util/enricozon-prime-mobile/prime/index.html
+++ b/util/enricozon-prime-mobile/prime/index.html
@@ -3,11 +3,41 @@
 <head>
     <link rel="icon" href="logo.jpeg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <title>Enricozon Prime</title>
+    <style>
+        body {
+ color: white;
+ background-color: black;
+ text-align: center;
+ top: 50%;
+}
+p3{
+    position: absolute;
+    display: block;
+    top: 55%;
+    left: 100px;
+    padding: 15px 30px;
+    color: grey;
+    text-transform: uppercase;
+    text-decoration-line: none;
+    font-size: 24px;
+    overflow: hidden;
+    transition: 0.2s;
+    cursor: pointer;
+  }
+  
+  p3:hover{
+    color: black;
+    background: cyan;
+    box-shadow: 0 0 10px cyan, 0 0 40px cyan, 0 0 80px cyan;
+    transition-delay: 0.02s;
+  }
+
+
+    </style>
 </head>
 <body>
-    <img src="prime2.jpg">
+    <img src="prime2.jpg" style="width: 250px;height: 200px;">
     <h1>COMING SOON</h1>
     <p3>
         <a href="enricozon.cranci.xyz">
@@ -15,6 +45,6 @@
           <span></span>
           <span></span>
           <span></span>
-          TORNA SU ENRICOZON
+          TORNA <br>SU<br> ENRICOZON
       </p3>
 </body>
