fix bottone prime 2

--- a/util/enricozon-prime-mobile/prime/index.html
+++ b/util/enricozon-prime-mobile/prime/index.html
@@ -40,8 +40,8 @@ p3{
     <img src="prime2.jpg" style="width: 250px;height: 200px;">
     <h1>COMING SOON</h1>
     <p3>
-        <a href="enricozon.cranci.xyz">
+        <a href="https://enricozon.cranci.xyz/">
           
-          TORNA <br>SU<br> ENRICOZON
+          TORNA <br>SU<br> ENRICOZON</a>
       </p3>
 </body>
