--- a/util/enricozon-prime/prime/index.html
+++ b/util/enricozon-prime/prime/index.html
@@ -38,11 +38,11 @@ p3{
     <img src="prime2.jpg">
     <h1>COMING SOON</h1>
     <p3>
-        <a href="enricozon.cranci.xyz">
+        <a href="https://enricozon.cranci.xyz/">
           <span></span>
           <span></span>
           <span></span>
           <span></span>
-          TORNA SU ENRICOZON
+          TORNA SU ENRICOZON</a>
       </p3>
 </body>
