--- a/util/enricozon-prime/prime/index.html
+++ b/util/enricozon-prime/prime/index.html
@@ -31,7 +31,9 @@ p3{
     box-shadow: 0 0 10px cyan, 0 0 40px cyan, 0 0 80px cyan;
     transition-delay: 0.02s;
   }
-
+a{
+  text-decoration: none;
+}
     </style>
 </head>
 <body>
