--- a/products/mandaino-enricozon/index.html
+++ b/products/mandaino-enricozon/index.html
@@ -52,7 +52,7 @@
       </ul>
     </div>
     <div class="nav-logo">
-      <a href="/">
+      <a href="https://enricozon-team.github.io/enricozon-hw/">
         <img src="enricozon.png" alt="Enricozon" height="48" />
       </a>
     </div>
@@ -64,7 +64,7 @@
         <form id="search-box">
           <input type="text" value="robe da rubare">
         </form>
-        <a href="/">
+        <a href="https://enricozon-team.github.io/enricozon-hw/">
           <span class="search-button-sprite"></span>
         </a>
       </div>
