--- a/products/misterybox-enricozon/index.html
+++ b/products/misterybox-enricozon/index.html
@@ -68,7 +68,7 @@
       <form id="search-box">
         <input type="text" value="robe da rubare">
       </form>
-      <a href="/">
+      <a href="https://enricozon-team.github.io/enricozon-hw/">
         <span class="search-button-sprite"></span>
       </a>
     </div>
