--- a/products/terra-enricozon/index.html
+++ b/products/terra-enricozon/index.html
@@ -51,7 +51,7 @@
     </ul>
   </div>
   <div class="nav-logo">
-    <a href="https://enricozon-team.github.io/enricozon-hw/">
+    <a href="/">
       <img src="enricozon.png" alt="Enricozon" height="48" />
     </a>
   </div>
@@ -63,7 +63,7 @@
       <form id="search-box">
         <input type="text" value="robe da rubare">
       </form>
-      <a href="https://enricozon-team.github.io/enricozon-hw/">
+      <a href="/">
         <span class="search-button-sprite"></span>
       </a>
     </div>
