--- a/products/divano-enricozon/index.html
+++ b/products/divano-enricozon/index.html
@@ -53,7 +53,7 @@
     </ul>
   </div>
   <div class="nav-logo">
-    <a href="/">
+    <a href="https://enricozon-team.github.io/enricozon">
       <img src="enricozon.png" alt="Enricozon" height="48" />
     </a>
   </div>
@@ -65,7 +65,7 @@
       <form id="search-box">
         <input type="text" value="robe da rubare">
       </form>
-      <a href="/">
+      <a href="https://enricozon-team.github.io/enricozon">
         <span class="search-button-sprite"></span>
       </a>
     </div>
