--- a/util/time/index.html
+++ b/util/time/index.html
@@ -50,7 +50,7 @@
         <button onclick="navigateTo('https://enricozon-team.github.io/enricozon-hw')">Halloween 2023</button>
         <button onclick="navigateTo('https://enricozon-team.github.io/enricozon')">Enricozon 1.0</button>
 
-        <button id="returnButton" onclick="navigateTo('https://enricozon.cranci.xyz')">Torna all'era attuale</button>
+        <button id="returnButton" onclick="navigateTo('https://enricozon.mom')">Torna all'era attuale</button>
 
     </div>
 
